--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <hr />
     <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
     <img
-      src="./assets/images/movie-ranking.png"
+      src="movie-ranking.png"
       height="200"
       alt="Movie Ranking Project"
     />
     <h3><a href="./public/birthday-invite.html">Bday Invite Project</a></h3>
     <img
-      src="./assets/images/birthday-invite.png"
+      src="birthday-invite.png"
       height="200"
       alt="Bday Invite Project"
     />
