--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
       I'm a web developer
     </head>
     <hr />
-    <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
+    <h3><a href="movie-ranking.html">Movie Ranking Project</a></h3>
     <img
       src="movie-ranking.png"
       height="200"
       alt="Movie Ranking Project"
     />
-    <h3><a href="./public/birthday-invite.html">Bday Invite Project</a></h3>
+    <h3><a href="birthday-invite.html">Bday Invite Project</a></h3>
     <img
       src="birthday-invite.png"
       height="200"
