--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       alt="Bday Invite Project"
     />
     <br />
-    <a href="./public/about.html">About Me</a>
-    <a href="./public/contact.html">Contact Me</a>
+    <a href="about.html">About Me</a>
+    <a href="contact.html">Contact Me</a>
   </body>
 </html>
 <!-- TODO 2: Add Your previous projects' HTML into the public folder -->
